--- a/pathfinding/pom.xml
+++ b/pathfinding/pom.xml
@@ -42,6 +42,12 @@
             	<artifactId>springfox-swagger-ui</artifactId>
             	<version>${swagger.version}</version>
         </dependency>
+
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.11.0</version>
+		</dependency>
 		
 	</dependencies>
 		<repositories>
