--- a/pathfinding/pom.xml
+++ b/pathfinding/pom.xml
@@ -44,11 +44,24 @@
         </dependency>
 
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
+
+		<dependency>
+			<groupId>com.iwhere</groupId>
+			<artifactId>gisutil</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
+		<!--
+		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.11.0</version>
 		</dependency>
-		
+		-->
 	</dependencies>
 		<repositories>
 				<repository>
